# TJ_FX_ROBOT_CONTRL_SDK

.github/workflows/: build_deb.yml
contrlSDK/: .gitignore  CMakeLists.txt  README.md  makefile  marvin-sdk_1.0.0_amd64.deb  marvin_bind.cpp  pyproject.toml  python3-marvin-sdk_1.0.0_amd64.deb
contrlSDK/scripts/: make_deb.sh
